--- a/style.css
+++ b/style.css
@@ -165,7 +165,11 @@ body {
     border-top: 3px dotted #CEAB93;
     width: 90% !important;
   }
-
+  
+  .aboutmetext {
+    padding-left: 75px !important;
+    padding-right: 75px !important;
+  }
 }
 
 /* @media screen and (max-width: 1370px) and (min-width: 875px){
@@ -188,7 +192,7 @@ body {
 
 .sidebar {
   height: 100%;
-  width: 100%;
+  width: 0%;
   position: fixed;
   z-index: 1;
   top: 0;
@@ -200,7 +204,7 @@ body {
 } 
 
 .sidebar a {
-  padding: 10px 15px 8px 32px;
+  padding: 10px 15px 8px 50px;
   text-decoration: none;
   font-size: 25px;
   color: #3B3D3F;
@@ -217,10 +221,10 @@ body {
 
 .sidebar .closebtn {
   position: absolute;
-  top: 0;
+  top: 8px;
   text-align: right;
   padding-top: 30px;
-  right: 10px;
+  right: 50px;
   font-size: 36px;
 }
 
