--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body {
   color: #3B3D3F; 
   font-size: 80px; 
   margin: 5px 0px;
-  width:140%;
+  /* width:140%; */
   position: absolute;
   transform: translateY(30px) translateX(-3px);
 }
@@ -402,4 +402,18 @@ hr.dotted {
   .portfolio {
     padding-left: 200px;
     padding-right: 200px;
+  }
+
+  h3 {
+    text-align: center;
+    height: 45px;
+  }
+  
+  h4 {
+    text-align: center;
+    font-weight: 100;
+  }
+
+  .content {
+    text-align: center;
   }
