--- a/portfolio.css
+++ b/portfolio.css
@@ -33,6 +33,7 @@
     overflow: auto;
     background-color: #CEAB93;
     border-radius: 10px;
+    box-shadow: #3B3D3F;
   }
   
   /* Modal Content */
