--- a/portfolio.css
+++ b/portfolio.css
@@ -144,56 +144,87 @@
   
 
   
-  /* The Modal (background) */
-  .modal2 {
-    display: none;
-    position: fixed;
-    z-index: 1;
-    padding-top: 100px;
-    left: 15%;
-    top: 7%;
-    width: 70%;
-    height: 70%;
-    overflow: auto;
-    background-color: #3B3D3F;
-  }
-  
-  /* Modal Content */
-  .modal-content2 {
-    position: relative;
-    background-color: #fefefe;
-    margin: auto;
-    padding: 0;
-    width: 60%;
-    max-width: 1000px;
-  }
-  
-  /* The Close Button */
-  .close2 {
-    color: white;
-    position: absolute;
-    top: 10px;
-    right: 25px;
-    font-size: 35px;
-    font-weight: bold;
-  }
-  
-  .close2:hover,
-  .close2:focus {
-    color: #999;
-    text-decoration: none;
-    cursor: pointer;
-  }
-  
-  .mySlides2 {
-    display: none;
-  }
-  
-  .cursor2 {
-    cursor: pointer;
-  }
-  
-  .demo2 {
-    opacity: 0.6;
-  }
-  
+  /* width */
+.modal2::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+.modal2::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey; 
+  border-radius: 10px;
+}
+ 
+/* Handle */
+.modal2::-webkit-scrollbar-thumb {
+  background: #3B3D3F; 
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+.modal2::-webkit-scrollbar-thumb:hover {
+  background: #3B3D3F; 
+}
+
+/* The Modal (background) */
+.modal2 {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding-top: 80px;
+  left: 20%;
+  top: 20%;
+  width: 60%;
+  height: 70%;
+  overflow: auto;
+  background-color: #CEAB93;
+  border-radius: 10px;
+  box-shadow: #3B3D3F;
+}
+
+/* Modal Content */
+.modal-content2 {
+  position: relative;
+  background-color: #fefefe;
+  margin: auto;
+  padding: 0;
+  width: 60%;
+  max-width: 1000px;
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+/* The Close Button */
+.close2 {
+  color: #3B3D3F;
+  position: absolute;
+  top: 10px;
+  right: 25px;
+  font-size: 35px;
+}
+
+.close2:hover,
+.close2:focus {
+  color: #E3CAA5;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.mySlides2 {
+  display: none;
+  border-radius: 10px;
+  background-color: transparent;
+}
+
+.cursor2 {
+  cursor: pointer;
+}
+
+.demo2 {
+  opacity: 0.6;
+}
+
+.active,
+.demo2:hover {
+  opacity: 1;
+}
