--- a/portfolio.css
+++ b/portfolio.css
@@ -31,7 +31,7 @@
     width: 60%;
     height: 70%;
     overflow: auto;
-    background-color: #CEAB93;
+    background-color: #BE9B83;
     border-radius: 10px;
     box-shadow: #3B3D3F;
   }
