--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
   overflow-x: hidden;
 }
 
+/* NAVBAR AND SIDEBAR */
+
 .navbar {
   overflow: hidden;
   background-color: transparent;
@@ -42,26 +44,12 @@ body {
   color: #E3CAA5;
   transition: color 0.3s ease; 
 }
-/* 
-.navbar a.active {
-  color: #0067A5;
-} */
 
 .items {
   float: right;
   text-align: right;
 }
 
-
-/* @media screen and (max-width: 902.7px) {
-  .column .kiri {
-    padding-left: 50px !important;
-  }
-  
-  .column .kanan {
-    padding-right: 50px !important;
-  }
-} */
 
 @media screen and (max-width: 1071.2px) {
   .navbar {
@@ -96,9 +84,6 @@ body {
   }
 }
 
-
-
-
 @media screen and (max-width: 1071.2px) {
   .items.responsive {position: relative;}
   .items.responsive .icon {
@@ -112,100 +97,6 @@ body {
     text-align: left;
   }
 }
-
-.hello {
-  color: #3B3D3F; 
-  font-size: 30px; 
-  margin: 5px 0px;
-  position: absolute;
-  text-align: left;
-  transition: 0.4s;
-}
-.name {
-  text-align: left;
-  color: #3B3D3F; 
-  font-size: 80px; 
-  margin: 5px 0px;
-  width:1000px;
-  position: absolute;
-  transform: translateY(30px) translateX(-3px);
-  transition: 0.4s;
-}
-.desc {
-  color: #3B3D3F; 
-  font-size: 20px; 
-  margin: 5px 0px 40px;
-  transform: translateY(125px);
-  position: absolute;
-  text-align: left;
-  transition: 0.4s;
-}
-
-.profilephoto {
-  transition: 0.4s;
-  transform: translateY(35px) translateX(0px);
-  float: right;
-  height: 600px;
-  
-  /* width: 620px; */
-}
-
-
-@media screen and (max-width: 1071.2px) {
-  .hello {
-    transform: translateX(-130px);
-    transition: 0.4s;
-  }
-  .name {
-    transform: translateX(-133px) translateY(30px);
-    transition: 0.4s;
-  }
-  .desc {
-    transform: translateX(-130px) translateY(120px);
-    transition: 0.4s;
-  }
-  .profilephoto {
-    transform: translateY(35px) translateX(100px);
-    transition: 0.4s;
-  }
-
-  hr.dotted {
-    border-top: 3px dotted #CEAB93;
-    width: 90% !important;
-    transition: 0.4s;
-  }
-  
-  .aboutmetext {
-    padding-left: 75px !important;
-    padding-right: 75px !important;
-    transition: 0.4s;
-  }
-
-  .skillpng {
-    width: 90% !important;
-    margin-left: 5% !important;
-    margin-right: 5% !important;
-    transition: 0.4s;
-  }
-
-  .portfolio {
-    padding-left: 75px !important;
-    padding-right: 75px !important;
-    transition: 0.4s;
-  }
-}
-
-/* @media screen and (max-width: 1370px) and (min-width: 875px){
-  .hello {
-    font-size: 25px;
-  }
-  .name {
-    font-size: 60px;
-  }
-  .desc {
-    font-size: 21px;
-  }
-} */
 
 @media screen and (min-width: 902.7px) {
   .sidebar {
@@ -259,7 +150,6 @@ body {
   font-size: 36px;
 }
 
-
 #main {
   transition: margin-left .5s;
   padding: 16px;
@@ -271,12 +161,93 @@ body {
   .sidebar a {font-size: 18px;}
 }
 
-
-
-
 .sticky{
     color:#E0ECF4;
 }
+
+/* BODY */
+
+.hello {
+  color: #3B3D3F; 
+  font-size: 30px; 
+  margin: 5px 0px;
+  position: absolute;
+  text-align: left;
+  transition: 0.4s;
+}
+.name {
+  text-align: left;
+  color: #3B3D3F; 
+  font-size: 80px; 
+  margin: 5px 0px;
+  width:1000px;
+  position: absolute;
+  transform: translateY(30px) translateX(-3px);
+  transition: 0.4s;
+}
+.desc {
+  color: #3B3D3F; 
+  font-size: 20px; 
+  margin: 5px 0px 40px;
+  transform: translateY(125px);
+  position: absolute;
+  text-align: left;
+  transition: 0.4s;
+}
+
+.profilephoto {
+  transition: 0.4s;
+  transform: translateY(35px) translateX(-10px);
+  float: right;
+  height: 600px;
+}
+
+
+@media screen and (max-width: 1071.2px) {
+  .hello {
+    transform: translateX(-130px);
+    transition: 0.4s;
+  }
+  .name {
+    transform: translateX(-133px) translateY(30px);
+    transition: 0.4s;
+  }
+  .desc {
+    transform: translateX(-130px) translateY(120px);
+    transition: 0.4s;
+  }
+  .profilephoto {
+    transform: translateY(35px) translateX(100px);
+    transition: 0.4s;
+  }
+
+  hr.dotted {
+    border-top: 3px dotted #CEAB93;
+    width: 90% !important;
+    transition: 0.4s;
+  }
+  
+  .aboutmetext {
+    padding-left: 75px !important;
+    padding-right: 75px !important;
+    transition: 0.4s;
+  }
+
+  .skillpng {
+    width: 90% !important;
+    margin-left: 5% !important;
+    margin-right: 5% !important;
+    transition: 0.4s;
+  }
+
+  .portfolio {
+    padding-left: 75px !important;
+    padding-right: 75px !important;
+    transition: 0.4s;
+  }
+}
+
+
 
 /* Create two equal columns that floats next to each other */
 .column {
@@ -313,7 +284,7 @@ body {
     color: #3B3D3F; 
 } */
 
-.reveal{
+/* .reveal{
   position: relative;
   transform: translateY(150px);
   opacity: 0;
@@ -323,7 +294,7 @@ body {
 .reveal.active{
   transform: translateY(0);
   opacity: 1;
-}
+} */
 
 .skilltitle {
   text-align: center;
@@ -384,62 +355,62 @@ hr.dotted {
   padding: 20px;
 }
 
-  /* Add padding BETWEEN each column (if you want) */
-  .lower,
-  .lower > .columnn {
-    padding: 1px;
-  }
+/* Add padding BETWEEN each column (if you want) */
+.lower,
+.lower > .columnn {
+  padding: 1px;
+}  
   
-  /* Create four equal columns that floats next to each other */
+/* Create four equal columns that floats next to each other */
+.columnn {
+  float: left;
+  width: 25%;
+}
+
+/* Clear floats after rows */
+.lower:after {
+  content: "";
+  display: table;
+  clear: both;
+}  
+  
+/* Content */
+.content {
+  /* background-color: white; */
+  padding: 20px;
+  font-family: 'Secular One', sans-serif;
+  text-align: left;
+}
+
+/* Responsive layout - makes a two column-layout instead of four columns */
+@media screen and (max-width: 900px) {
   .columnn {
-    float: left;
-    width: 25%;
+    width: 50%;
   }
+}  
   
-  /* Clear floats after rows */
-  .lower:after {
-    content: "";
-    display: table;
-    clear: both;
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media screen and (max-width: 600px) {
+  .columnn {
+    width: 100%;
   }
-  
-  /* Content */
-  .content {
-    /* background-color: white; */
-    padding: 20px;
-    font-family: 'Secular One', sans-serif;
-    text-align: left;
-  }
-  
-  /* Responsive layout - makes a two column-layout instead of four columns */
-  @media screen and (max-width: 900px) {
-    .columnn {
-      width: 50%;
-    }
-  }
-  
-  /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
-  @media screen and (max-width: 600px) {
-    .columnn {
-      width: 100%;
-    }
-  }
+}
 
-  .portfolio {
-    padding-left: 180px;
-    padding-right: 180px;
-  }
+.portfolio {
+  padding-left: 180px;
+  padding-right: 180px;
+}
 
-  h3 {
-    text-align: center;
-    height: 45px;
-  }
-  
-  h4 {
-    text-align: center;
-    font-weight: 100;
-  }
+h3 {
+  text-align: center;
+  height: 45px;
+}
 
-  .content {
-    text-align: center;
-  }
+h4 {
+  text-align: center;
+  font-weight: 100;
+}
+
+.content {
+  text-align: center;
+}  
